some improvs, disable NTP

--- a/platformio.ini
+++ b/platformio.ini
@@ -33,7 +33,7 @@ upload_port = /dev/ttyUSB0
 extra_scripts = 
 	upload_firmware.py
 	pre:extra_script.py
-
+	post:post_extra.py
 custom_prog_version = 1.0.0
 build_flags =
     -DVERSION=${this.custom_prog_version}
