--- a/platformio.ini
+++ b/platformio.ini
@@ -17,11 +17,14 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.19.4
 	me-no-dev/ESP Async WebServer@^1.2.3
 	lorol/LittleFS_esp32@^1.0.6
-	khoih-prog/ESPAsync_WiFiManager@^1.12.2
 	ayushsharma82/AsyncElegantOTA@^2.2.7
 	khoih-prog/ESP_WifiManager@^1.10.2
 	s00500/ESPUI@^2.1.1
 	ayushsharma82/WebSerial@^1.3.0
+	4-20ma/ModbusMaster@^2.0.1
+	devyte/ESPAsyncDNSServer@^1.0.0
+	me-no-dev/ESPAsyncUDP@0.0.0-alpha+sha.697c75a025
+	khoih-prog/ESPAsync_WiFiManager@1.12.2
 monitor_speed = 9600
 board_build.filesystem = littlefs
 
@@ -29,23 +32,25 @@ board_build.filesystem = littlefs
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-upload_port = /dev/ttyUSB0
-extra_scripts = 
-	upload_firmware.py
-	pre:extra_script.py
-	post:post_extra.py
-custom_prog_version = 1.0.0
-build_flags =
-    -DVERSION=${this.custom_prog_version}
-upload_protocol = custom
-upload_url = http://kombi.local/update
-lib_deps = 
-	bblanchon/ArduinoJson@^6.19.4
-	lorol/LittleFS_esp32@^1.0.6
-	khoih-prog/ESPAsync_WiFiManager@^1.12.2
-	ayushsharma82/AsyncElegantOTA@^2.2.7
-	khoih-prog/ESP_WifiManager@^1.10.2
-	https://github.com/me-no-dev/ESPAsyncWebServer.git
-	ayushsharma82/WebSerial@^1.3.0
-monitor_speed = 115200
 board_build.filesystem = littlefs
+extra_scripts = 
+	; upload_firmware.py
+	; extra_script.py
+	; post:post_extra.py
+custom_prog_version = 1.0.2
+build_flags = 
+	-DVERSION=${this.custom_prog_version}
+; upload_url = http://kombi.local/update
+; upload_protocol = custom
+lib_deps = 
+	https://github.com/me-no-dev/ESPAsyncWebServer.git ;Try to new espressif32 version
+	bblanchon/ArduinoJson@^6.19.4
+	khoih-prog/ESP_WifiManager@^1.10.2
+	ayushsharma82/AsyncElegantOTA@^2.2.7
+	; me-no-dev/ESP Async WebServer@1.2.3
+	ayushsharma82/WebSerial@^1.3.0
+	4-20ma/ModbusMaster@^2.0.1
+	khoih-prog/ESPAsync_WiFiManager@1.12.2
+	me-no-dev/AsyncTCP@1.1.1
+	lorol/LittleFS_esp32@^1.0.6
+monitor_speed = 115200
