Feat: Svelte added

--- a/platformio.ini
+++ b/platformio.ini
@@ -40,8 +40,9 @@ extra_scripts =
 custom_prog_version = 1.0.2
 build_flags = 
 	-DVERSION=${this.custom_prog_version}
-; upload_url = http://kombi.local/update
+upload_url = http://kombi2.local/update
 ; upload_protocol = custom
+; upload_port = kombi2.local
 lib_deps = 
 	https://github.com/me-no-dev/ESPAsyncWebServer.git ;Try to new espressif32 version
 	bblanchon/ArduinoJson@^6.19.4
